--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@
                     </div>
                     <img src="img/Box-watch.png" alt="box-watch" class="promo__bottom-watch">
                </div>
-               <a href="#footer" class="btn btn-991">Заказать по акции</a>
+               <a href="#form" class="btn btn-991">Заказать по акции</a>
             </div>
         </div>
     </section>
@@ -206,7 +206,7 @@
                     <img src="img/hero-school.jpg" alt="hero-blue" class="ability__img">
                  </div>
             </div>
-            <a href="#footer" class="btn btn_center">Купить по акции</a>
+            <a href="#form" class="btn btn_center">Купить по акции</a>
         </div>
     </section>
 
@@ -270,7 +270,7 @@
                     </div>
                 </div>
             </div>
-            <a href="#footer" class="btn btn_center">Купить по акции</a>
+            <a href="#form" class="btn btn_center">Купить по акции</a>
         </div>
     </section>
 
@@ -308,7 +308,7 @@
                     </div>
                 </div>
             </div>
-            <a href="#footer" class="btn btn_center">Купить по акции</a>
+            <a href="#form" class="btn btn_center">Купить по акции</a>
         </div>
     </section>
 
@@ -398,7 +398,7 @@
                     </li>
                 </ul>
             </div>
-            <a href="#footer" class="btn btn_center">Купить по акции</a>
+            <a href="#form" class="btn btn_center">Купить по акции</a>
         </div>
     </section>
     <footer class="footer" id="footer">
@@ -412,7 +412,7 @@
                 <img src="img/Box-watch.png" alt="watch" class="footer__watch">
             </div>
             <div class="footer__bottom">
-                <form class="form form_footer" method="post" action="">
+                <form id="form" class="form form_footer" method="post" action="">
                     <input class="form__item" type="text" name="name" placeholder="Имя">
                     <input class="form__item" name="phone" type="tel" placeholder="Телефон">
                     <button type="submit" class="btn btn_form">
