final project ready

--- a/src/index.html
+++ b/src/index.html
@@ -335,10 +335,10 @@
                         <img class="feed__slider-img" src="img/feed-2.jpg" alt="photo">
                         <div class="feed__slider-descr">
                             <div class="feed__slider-name">
-                                Анна Смирнова, Киев
+                                Юлия Тарасенко, Львов
                             </div>
                             <div class="feed__text">
-                                Моя Катя (7 лет) часто играет с друзьями во дворе. В любой момент могу посмотреть где она и перезвонить прямо на часы.
+                                Прикольно, что не нужно кричать на весь двор: «Дима, домой!». А сыну нравится разговаривать по часам, прям как супергерою.
                             </div>
                         </div>
                     </div>
@@ -347,10 +347,10 @@
                         <img class="feed__slider-img" src="img/feed-3.jpg" alt="photo">
                         <div class="feed__slider-descr">
                             <div class="feed__slider-name">
-                                Анна Смирнова, Киев
+                                Евгений Роман, Одесса
                             </div>
                             <div class="feed__text">
-                                Моя Катя (7 лет) часто играет с друзьями во дворе. В любой момент могу посмотреть где она и перезвонить прямо на часы.
+                                Мой ребенок после школы долгое время гуляет по городу в местах повышенной опасности. Теперь со спокойствием я могу проконтроллировать его маршрут домой.
                             </div>
                         </div>
                     </div>
@@ -359,10 +359,10 @@
                         <img class="feed__slider-img" src="img/feed-4.jpg" alt="photo">
                         <div class="feed__slider-descr">
                             <div class="feed__slider-name">
-                                Анна Смирнова, Киев
+                                Елена Паламарчук, Харьков
                             </div>
                             <div class="feed__text">
-                                Моя Катя (7 лет) часто играет с друзьями во дворе. В любой момент могу посмотреть где она и перезвонить прямо на часы.
+                                Сын несколько раз прогуливал школу. Поэтому я взяла его на контроль и купила часы. Теперь буду всегда знать, где он и что делает. Спасибо за эти супер-часы!
                             </div>
                         </div>
                     </div>
@@ -412,8 +412,9 @@
                 <img src="img/Box-watch.png" alt="watch" class="footer__watch">
             </div>
             <div class="footer__bottom">
-                <form id="form" class="form form_footer" method="post" action="">
+                <form id="form" class="form form_footer">
                     <input class="form__item" type="text" name="name" placeholder="Имя">
+                    <span></span>
                     <input class="form__item" name="phone" type="tel" placeholder="Телефон">
                     <button type="submit" class="btn btn_form">
                         Оформить заказ
